# HypOptLib

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  additions.html  background.html  fullapi.html  genindex.html  index.html  installation.html  library.html  macros.sh  objects.inv  search.html  searchindex.js
.github/workflows/: cmake-single-platform.yml  self-test-ci.yml
HypOptLib/: CMakeLists.txt  CMakeLists__OLD_C_VERSION.txt
HypOptLib/cmake-modules/: FindPETSc.cmake
HypOptLib/include/: FileManager.h  Filter.h  FilterWrapper.h  HypOptException.h  HypOptLib.h  HypOptParameters.h  Hyperoptimization.h  LagrangeMultiplier.h  LinearElasticity.h  PDEFilter.h  PetscExtensions.h  SensitivitiesWrapper.h  TopOpt.h
HypOptLib/src/: FileManager.cc  Filter.cc  FilterWrapper.cc  HypOptLib.cc  Hyperoptimization.cc  LagrangeMultiplier.cc  LinearElasticity.cc  PDEFilter.cc  PetscExtensions.cc  SensitivitiesWrapper.cc  TopOpt.cc  main.cc
_sources/: additions.rst.txt  installation.rst.txt
_sources/apidocs/: FilterWrapper.rst.txt  Hyperoptimization.rst.txt  SensitivitiesWrapper.rst.txt  pybind11.rst.txt
analysis/: animate.py  compareTemps.py  config.py  finalPositionToXdmf.py  generateMeanMap.py  hdf5Analysis.py  hdf5Analysis_general.py  hdf5Analysis_hamiltonian.py  hdf5Analysis_temperature.py  percentDifference.py  plotHistograms.py  plotting.py  utilities.py
analysis/SampleFiles/: sample_cantilever.h5  sample_cantilever_restart.h5
apidocs/: FileManager.html  FilterWrapper.html  HypOptException.html  HypOptParameters.html  Hyperoptimization.html  LagrangeMultiplier.html  PetscExtensions.html  SensitivitiesWrapper.html  macros.html  pybind11.html
docs/: Doxyfile
docs/source/: apiDocumentation.rst  background.rst  conf.py  fullapi.rst  index.rst  installation.rst  library.rst
docs/source/apidocs/: FileManager.rst  HypOptException.rst  HypOptLib.rst  HypOptParameters.rst  LagrangeMultiplier.rst  PetscExtensions.rst  macros.rst  pybind11.rst
examples/: MBB.py  cantilever.py  multiforce.py
include/: FileManager.h  FilterWrapper.h  HypOptException.h  HypOptLib.h  HypOptParameters.h  Hyperoptimization.h  LagrangeMultiplier.h  LagrangianMultiplier.h  LinearElasticity.h  PetscExtensions.h  TopOpt.h
paper/: README.md  paper.bib  paper.md
run/: job.sh  main.py  selfTest.py
selfTestFiles/: basicSantiy_t0_16x8x8_200itr.h5
signac/: cantilevered_beam.py  init.py  project.py
signac/templates/: GvA_base_20240321.sh  HypOptCAC.sh
src/: FileManager.cc  Filter.cc  FilterWrapper.cc  HypOptLib.cc  Hyperoptimization.cc  LagrangianMultiplier.cc  LinearElasticity.cc  PetscExtensions.cc  SensitivitiesWrapper.cc  TopOpt.cc  main.cc
